# axum-login-minimal-example

./: Cargo.toml  README.md
src/: accounts.rs  lib.rs  main.rs
src/accounts/: account.rs  login.rs  register.rs
